--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pydantic==1.8.2
-boto3==1.18.28
-botocore==1.21.28
+boto3==1.18.29
+botocore==1.21.29
 Flask==2.0.1
+pytest==6.2.4
 python-dotenv==0.19.0
