--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ orbs:
   # Orb commands and jobs help you with common scripting around a language/tool
   # so you dont have to copy and paste it everywhere.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/python
+  # localstack: localstack/platform@1.0.0
   python: circleci/python@1.2
-  localstack: localstack/platform@1.0.0
 workflows:
   sample:  # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run. 
@@ -26,7 +26,13 @@ jobs:
     environment:
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
-    executor: localstack/default
+    docker:
+      - image: cimg/python:3.8 # <-- the job steps run in this container
+      - image: localstack/localstack:0.10.5 # <-- this is spun up for us by Circle
+        environment:
+          DEBUG: 1
+          SERVICES: s3,dynamodb
+
     # Checkout the code as the first step. This is a dedicated CircleCI step.
     # The python orb's install-packages step will install the dependencies from a Pipfile via Pipenv by default.
     # Here we're making sure we use just use the system-wide pip. By default it uses the project root's requirements.txt.
@@ -38,7 +44,6 @@ jobs:
           pkg-manager: pip
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
-      - localstack/start
       - run:
           name: install as package
           command: pip install -e .
