--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,17 +23,18 @@ jobs:
     # A list of available CircleCI Docker convenience images are available here: https://circleci.com/developer/images/image/cimg/python
     # The executor is the environment in which the steps below will be executed - below will use a python 3.9 container
     # Change the version below to your required version of python
-    environment:
-      AWS_ACCESS_KEY_ID: test
-      AWS_SECRET_ACCESS_KEY: test
-      FLASK_ENV: development
+
     docker:
       - image: cimg/python:3.8 # <-- the job steps run in this container
-      - image: localstack/localstack:0.10.5 # <-- this is spun up for us by Circle
+        environment:
+          AWS_ACCESS_KEY_ID: test
+          AWS_SECRET_ACCESS_KEY: test
+          FLASK_ENV: development
+      - image: localstack/localstack:latest # <-- this is spun up for us by Circle
         environment:
           DEBUG: 1
           SERVICES: s3,dynamodb
-
+        
     # Checkout the code as the first step. This is a dedicated CircleCI step.
     # The python orb's install-packages step will install the dependencies from a Pipfile via Pipenv by default.
     # Here we're making sure we use just use the system-wide pip. By default it uses the project root's requirements.txt.
