--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,12 @@ workflows:
     # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows 
     jobs:
       - test-pytest
+      - build-dist:
+          requires:
+            - test-pytest
       - build-docker:
+          requires:
+            - build-dist
           context:
             - secrets
 
@@ -64,6 +69,20 @@ jobs:
           command: pytest
       - store_test_results:
           path: test-results
+
+  build-dist:
+    docker:
+      - image: cimg/python:3.8 # <-- the job steps run in this container
+        environment:
+          FLASK_APP: candle_data_service       
+    steps:
+      - checkout
+      - python/install-packages:
+          pkg-manager: pip
+          args: build
+      - run:
+          name: run build
+          command: python -m build
 
   build-docker:
     working_directory: /app
