--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,14 +101,14 @@ jobs:
           at: dist/
       - run:
           command: ls -al dist
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --no-cache \
-              py-pip
-            pip install \
-              docker-compose \
-              awscli
+      # - run:
+      #     name: Install dependencies
+      #     command: |
+      #       apk add --no-cache \
+      #         py-pip=9.0.0-r1
+      #       pip install \
+      #         docker-compose==1.12.0 \
+      #         awscli==1.11.76
       - restore_cache:
           keys:
             - v1-{{ .Branch }}
