--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+boto3==1.18.33
+pytest==6.2.5
+Flask_Cors==3.0.10
 pydantic==1.8.2
-boto3==1.18.29
-botocore==1.21.29
+botocore==1.21.33
 Flask==2.0.1
-pytest==6.2.4
-python-dotenv==0.19.0
-wheel
-flask_cors==3.0.10
-build
+flask[async]
+ccxt==1.51.3
+Werkzeug==2.0.2
+python-dotenv==0.19.1
