database migrated to MariaDB; auto-download candles when needed; time_start & time_end should work now

--- a/candle_data_service/.dev.env
+++ b/candle_data_service/.dev.env
@@ -1,3 +1,10 @@
 S3_ENDPOINT_URL="http://127.0.0.1:4566"
 DYNAMODB_REGION=localhost
 DYNAMODB_ENDPOINT_URL=http://127.0.0.1:4566
+
+DATA_SOURCE_PROVIDER=MariaDB
+MARIADB_HOST=127.0.0.1
+MARIADB_PORT=3306
+MARIADB_USER=test
+MARIADB_PASSWORD=test
+MARIADB_DB_NAME=candle_data_service
