--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-boto3==1.18.33
-pytest==6.2.5
-Flask_Cors==3.0.10
-pydantic==1.8.2
-botocore==1.21.33
-Flask==2.0.1
-flask[async]
 ccxt==1.51.3
+botocore==1.21.33
+pytest==6.2.5
+boto3==1.18.33
+pydantic==1.8.2
 Werkzeug==2.0.2
+Flask==2.0.1
+mariadb==1.0.7
+Flask_Cors==3.0.10
 python-dotenv==0.19.1
+flask[async]
