--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
           command: pip install -e .
       - run: 
           name: create_environment.py
-          command: python create_environment.py
+          command: python candle_data_service/create_environment.py
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
