--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-ccxt==1.51.3
+Flask_Cors==3.0.10
+Flask==2.0.1
 botocore==1.21.33
+ccxt==1.51.3
 pytest==6.2.5
 boto3==1.18.33
-pydantic==1.8.2
 Werkzeug==2.0.2
-Flask==2.0.1
+pydantic==1.8.2
 mariadb==1.0.7
-Flask_Cors==3.0.10
-python-dotenv==0.19.1
+pika==1.2.0
+protobuf==3.19.1
+python-dotenv==0.19.2
 flask[async]
