--- a/candle_data_service/.main.env
+++ b/candle_data_service/.main.env
@@ -2,3 +2,4 @@ SETTINGS_DATA_PROVIDER=S3
 S3_BUCKET_NAME="crp-agh-settings"
 S3_OBJECT_NAME="candle_data_service"
 RABBIT_HOSTNAME=localhost
+RABBIT_CANDLES_EXCHANGE_NAME=candles
