--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-Flask_Cors==3.0.10
-Flask==2.0.1
-botocore==1.21.33
-ccxt==1.51.3
-pytest==6.2.5
 boto3==1.18.33
-Werkzeug==2.0.2
-pydantic==1.8.2
-mariadb==1.0.7
 pika==1.2.0
+pydantic==1.8.2
+tenacity==8.0.1
+Werkzeug==2.0.2
+ccxt==1.51.3
+Flask_Cors==3.0.10
+botocore==1.21.33
+Flask==2.0.1
+mariadb==1.0.7
+pytest==6.2.5
 protobuf==3.19.1
 python-dotenv==0.19.2
+PyYAML==6.0
 flask[async]
-pika==1.2.0
