--- a/candle_data_service/.main.env
+++ b/candle_data_service/.main.env
@@ -3,3 +3,4 @@ S3_BUCKET_NAME="crp-agh-settings"
 S3_OBJECT_NAME="candle_data_service"
 RABBIT_HOSTNAME=localhost
 RABBIT_CANDLES_EXCHANGE_NAME=candles
+DB_CONNECTION_ATTEMPTS=60
