--- a/candle_data_service/.main.env
+++ b/candle_data_service/.main.env
@@ -4,3 +4,7 @@ S3_OBJECT_NAME="candle_data_service"
 RABBIT_HOSTNAME=localhost
 RABBIT_CANDLES_EXCHANGE_NAME=candles
 DB_CONNECTION_ATTEMPTS=60
+KINESIS_ENDPOINT=http://localhost:4566
+KINESIS_STREAM_NAME=candles
+KINESIS_ENABLED=0
+PERIODIC_DOWNLOADER_ENABLED=1
